# OpenRegistry

./: .gitignore  CMakeLists.txt
Include/: Registry.h  RegistryString.h
Source/: Common.h  Endian.h  Hive.c  Key.c  String.c  Value.c  ValueData.c
Source/ConfigManager/: cmlib.h
Source/ConfigManager/Dependency/: ntoskrnl.c  poppack.h
Source/SimdUtf/: SimdUtf.c  SimdUtf.h
